[package]
name = "cpgrust"
version = "0.1.0"
edition = "2021"

[lib]
name = "cpgrust"
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
uniffi = { version = "0.30.0", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.30.0", features = [ "build" ] }

[[bin]]
# This binary for binding generation comes from https://mozilla.github.io/uniffi-rs/latest/tutorial/foreign_language_bindings.html
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"